--- a/gui/api/com/untangle/gui/configuration/AboutTimezoneJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/AboutTimezoneJPanel.form
@@ -80,13 +80,13 @@
                     </Property>
                     <Property name="focusable" type="boolean" value="false"/>
                     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[175, 24]"/>
+                      <Dimension value="[425, 24]"/>
                     </Property>
                     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[175, 24]"/>
+                      <Dimension value="[425, 24]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[175, 24]"/>
+                      <Dimension value="[425, 24]"/>
                     </Property>
                   </Properties>
                   <Constraints>
@@ -100,7 +100,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Dialog" size="12" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Time as of Refresh:"/>
+                    <Property name="text" type="java.lang.String" value="Time at Refresh:"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
