--- a/gui/api/com/untangle/gui/login/InitialSetupPasswordJPanel.form
+++ b/gui/api/com/untangle/gui/login/InitialSetupPasswordJPanel.form
@@ -176,11 +176,14 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
+                <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[425, 24]"/>
+                </Property>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[200, 24]"/>
+                  <Dimension value="[425, 24]"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[200, 24]"/>
+                  <Dimension value="[425, 24]"/>
                 </Property>
               </Properties>
               <Constraints>
