--- a/gui/api/com/untangle/gui/configuration/MaintenancePingJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/MaintenancePingJPanel.form
@@ -53,7 +53,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;The Ping Test can be used to test that a particular host or client is contactable from Untangle.&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;The Ping Test can be used to test that a particular host or client can be contacted from Untangle.&lt;/html&gt;"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
