--- a/gui/api/com/untangle/gui/login/MLoginJFrame.form
+++ b/gui/api/com/untangle/gui/login/MLoginJFrame.form
@@ -116,6 +116,7 @@
                   <Font name="Arial" size="12" style="0"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="2"/>
+                <Property name="text" type="java.lang.String" value="admin"/>
                 <Property name="doubleBuffered" type="boolean" value="true"/>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[150, 20]"/>
