--- a/gui/api/com/untangle/gui/login/InitialSetupEmailJPanel.form
+++ b/gui/api/com/untangle/gui/login/InitialSetupEmailJPanel.form
@@ -31,7 +31,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Which email server (SMTP) should the Untangle Server use to send emails, reports, etc?&lt;br&gt;&lt;b&gt;This information is optional.&lt;/b&gt;&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Which email server (SMTP) should the Untangle Server use to send emails, reports, etc.?&lt;br&gt;&lt;b&gt;This information is optional.&lt;/b&gt;&lt;/html&gt;"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
