fix bug 2340 - rename rule label as SID and add SID info to details
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@8901 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/ids/impl/com/untangle/tran/ids/reports/IDSTopClients.jrxml
+++ b/tran/ids/impl/com/untangle/tran/ids/reports/IDSTopClients.jrxml
@@ -128,7 +128,7 @@ SELECT rule_sid,
                 <textElement textAlignment="Left" verticalAlignment="Top" rotation="None" lineSpacing="Single">
                     <font fontName="SansSerif" pdfFontName="Helvetica" size="9" isBold="false" isItalic="true" isUnderline="false" isPdfEmbedded ="false" pdfEncoding ="Cp1252" isStrikeThrough="false" />
                 </textElement>
-            <text><![CDATA[Rule #]]></text>
+            <text><![CDATA[SID]]></text>
             </staticText>
             <staticText>
                 <reportElement
