fix bug 2108 - break total email count and size of inbox for quarantine store into separate lines
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@8906 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
+++ b/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
@@ -47,6 +47,7 @@ $numRecsNotShown - Number of records which could not be shown for space reasons
 
 $totalNumRecords - total number of records (because this Velocity junk would
                    not understand "$inboxrecords.length")
+$totalSizeRecords - total size of records
 
 $jsEscaper - Instance which can escape JavaScript if found in subject
 
@@ -632,12 +633,12 @@ hr {
                         </td>
 
                         <th scope="row">TOTALS</th>
-                        <td colspan="3" align=left>$totalNumRecords</td>
+                        <td colspan="3" align=left>$totalNumRecords<br>$totalSizeRecords</td>
                       </tr>
                     #else
                       <tr>
                         <th scope="row">TOTALS</th>
-                        <td colspan="6" align=left>$totalNumRecords</td>
+                        <td colspan="6" align=left>$totalNumRecords<br>$totalSizeRecords</td>
                       </tr>
                     #end
                     </tfoot>
