--- a/gui/api/com/untangle/gui/main/MMainJFrame.form
+++ b/gui/api/com/untangle/gui/main/MMainJFrame.form
@@ -103,7 +103,7 @@
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                    <TitledBorder title=" Click to Purchase ">
+                    <TitledBorder title=" Click to Learn More">
                       <Font PropertyName="font" name="Arial" size="11" style="0"/>
                     </TitledBorder>
                   </Border>
