fix bugs 2109 and 2107 - clean up stylesheets and styles
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@9007 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
+++ b/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
@@ -25,8 +25,6 @@ There are two comment conventions for Velocity.  Single-line comments begin with
 
 Velocity follows the intuitive dollar ("$") syntax for variables.  For example, "$user_email" will become the current email address when the template is processed.  Some of the variables are treated as Object references, with methods being called.  If you want to know more, go read about Velocity.  Otherwise, I'll present the Objects used in *this* template below, along with any other potentialy confusing syntax.
 
-
-
 1) Summary of Objects/variables referenced
 
 $user_email - the user's email address (a string)
@@ -89,6 +87,9 @@ There is one loop you can use, iterating over the elements of $inboxrecords.  Ex
 Where "$record" will be replaced with the "current" record while iterating over the record set.
 
 
+XXX Based on quarantine style.css except where noted and
+does not include any table.slist styles.
+
 ---------------------------------------------------------------
 *#
 ##
@@ -101,32 +102,10 @@ Where "$record" will be replaced with the "current" record while iterating over 
   <head>
     <title>Untangle | Quarantine Digest for $user_email</title>
   <style>
-table.outertable {
-  background:#FFFFFF;
-  padding: 0;
-  margin: 0;
-  /* Note the magic trick below to center the table */
-  width: 96%;
-  height: 95%;
-  margin-left:2%;
-  margin-right:2%;
-  margin-top:1%;
-  margin-bottom:4%;
-}
 
 .logoTable {
-  padding-left: 15;
+  padding-left: 15; 
   padding-top: 15;
-}
-
-table.intro {
-  padding-left: 10;
-  padding-top: 15;
-}
-
-table.introUserInfo {
-  padding-left: 10;
-  text-align: right;
 }
 
 .infotext {
@@ -138,18 +117,22 @@ table.introUserInfo {
 }
 
 table.actions {
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  border-collapse: collapse;
   margin: 0;
   padding: 0;
   color: #FFFFFF
 }
 
 table.actions tbody TD {
-  background-color: #34609B;
+  background-color: #C1C1C1;  
   padding: 15;
 }
 
 table.actions tbody TD + TD {
-  background-color: #34609B;
+  background-color: #C1C1C1;  
   text-align: right;
   padding-right: 10;
 }
@@ -160,136 +143,41 @@ table.actions tbody TD + TD {
 }
 
 .msiehack1 {
-  background-color: #34609B;
+  background-color: #C1C1C1;  
   text-align: right;
+  color: #606060;
   padding-right: 10;
 }
 .msiehack2 {
-  background-color: #34609B;
+  background-color: #C1C1C1;  
   text-align: left;
+  color: #606060;
   padding-left: 10;
 }
 
-table.actions a {
-  color: #FFFFFF;
-}
-table.actions a:visited {
-  color: #CCFFFF;
-}
-table.actions a:hover {
-  color: #33FFFF;
-}
-table.actions a:active {
-  color: #FF0000;
-}
-
 .errortext {
-  font:  normal 20 Arial,Geneva; color: #FF0000;
+  font: normal 20 Arial, Geneva;
+  color: #FF0000;
   padding-left: 10;
   padding-right: 10;
   padding-bottom: 10;
 }
 
 .messageText {
-  font:  normal 20 Arial,Geneva; color: #00ff00;
+  font: normal 20 Arial, Geneva;
+  color: #00ff00;
   padding-left: 10;
   padding-right: 10;
   padding-bottom: 10;
 }
 
-table.topofsl {
-  border-collapse: collapse;
-  border-style:  solid;
-  border-width: 1;
-  border-color: #666;
-  width: 98%;
-  margin-left:1%;
-  margin-right:1%;
-  background-color: #34609B;
-}
-
-
-
-table.slist {
-  border-collapse: collapse;
-  border-style:  solid;
-  border-width: 1;
-  border-color: #666;
-  width: 98%;
-  margin-left:1%;
-  margin-right:1%;
-}
-
-table.slist th, table.slist td {
-  border-bottom: 1px solid #666;
-  border-top: 1px solid #666;
-  padding: 0.6em;
-  vertical-align: 4px;
-}
-
-table.slist th {
-  text-align: left;
-  text-transform: uppercase;
-}
-
-table.slist tbody td.first {
-  text-align: left;
-  padding-left: 20;
-}
-
-table.slist tbody td.first a:link {
- font: normal normal normal 10pt/14pt Arial,Sans-Serif;
- color: #1997FE;
- text-decoration: none;
-}
-
-table.slist tbody td.first a:visited {
- font: normal normal normal 10pt/14pt Arial,Sans-Serif;
- color: #1997FE;
- text-decoration: none;
-}
-
-table.slist thead th {
-  background-color: #E0E0E0;
-  border-left: 1px solid #666;
-}
-
-table.slist table.slist tfoot th, table.slist tfoot td {
-  background-color: #E0E0E0;
-}
-
-table.slist thead th.first {
-  padding-left: 24px;
-}
-
-table.slist tbody th {
-  padding-left: 24px;
-}
-
-table.slist tr.even td, table.slist tr.even th {
-  background-color:#C1C1CE;
-}
-
-table.slist tr.odd td, table.slist tr.odd th {
-  background-color: #B7B7C4;
-}
-
-
-
-
-
-
-
-
-
-
-
-
 table.inbox {
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
   border-collapse: collapse;
   margin: 0;
   padding: 0;
-
 }
 
 table.inbox th, table.inbox td {
@@ -304,17 +192,20 @@ table.inbox th {
   text-transform: uppercase;
 }
 
+/* XXX Differs from quarantine style.css */
+table.inbox thead th.first {
+  background-color: #C1C1C1;  
+  padding-left: 24px;
+}
+
 table.inbox tbody td.first {
   text-align: left;
   padding-left: 20;
 }
 
-table.inbox thead th, table.inbox tfoot th, table.inbox tfoot td {
-  background-color: #E0E0E0;
-}
-
-table.inbox thead th.first {
-  padding-left: 24px;
+/* XXX Differs from quarantine style.css */
+table.inbox thead th {
+  background-color: #C1C1C1;  
 }
 
 table.inbox tbody th {
@@ -322,30 +213,19 @@ table.inbox tbody th {
 }
 
 table.inbox tr.even td, table.inbox tr.even th {
-  background-color:#eee;
+  background-color: #eee;
 }
 
 table.inbox tr.odd td, table.inbox tr.odd th {
   background-color: #ddd;
 }
 
-table.inbox tbody a {
-  color: #333;
-}
-
-table.inbox tbody a:visited {
-  color: #999999;
-}
-
-table.inbox tbody a:hover {
-  color: #33c;
-}
-
-table.inbox tbody a:active {
-  color: #33c;
+table.inbox tfoot th, table.inbox tfoot td {
+  background-color: #C1C1C1;  
 }
 
 table.inbox tfoot th {
+  background-color: #C1C1C1;  
   text-align: right;
 }
 
@@ -353,20 +233,8 @@ table.inbox tfoot th:after {
   content: ":";
 }
 
-.enteremail {
-  border-style: solid;
-  border-width: 1;
-  padding: 20;
-  background: #D0D0D0;
-  border-color: #000000;
-}
-
-.msiehack3 {
-  padding: 20;
-}
-
 .smallLogo {
-  font:  normal 12 arial, helvetica, sans serif;
+  font: normal 12 Arial, Helvetica, Sans-Serif;
   text-align: center;
   padding-top: 30;
   padding-bottom: 30;
@@ -374,30 +242,21 @@ table.inbox tfoot th:after {
   vertical-align: bottom;
 }
 
-
-
-
-
-
-
-
-
-
-
+/* XXX Differs from quarantine style.css */
 body {
      margin: 15px;
      background: #FFFFFF url($image_root/background_body.gif) repeat-x top left;
      text-align: center;
-}
+}  
 
 table {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
+    font: normal normal normal 10pt/14pt Arial, Sans-Serif;
     text-align: left;
     color: #606060;
 }
 
 input {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
+    font: normal normal normal 10pt/14pt Arial, Sans-Serif;
     text-align: left;
     color: #606060;
 }
@@ -406,36 +265,43 @@ form {
     margin: 0px;
 }
 
-
-a:link, a:visited {
-    font: normal normal normal 10pt/14pt Arial,Sans-Serif;
-    color: #1997FE;
+/* define link color override */
+a:link {
+    font: normal normal normal 10pt/14pt Arial, Sans-Serif;
+    color: #1997FE ! important;
     text-decoration: none;
 }
 
+/* define visited color override */
+a:visited {
+    font: normal normal normal 10pt/14pt Arial, Sans-Serif;
+    color: #1997FE ! important;
+    text-decoration: none;
+}
+
+/* define hover color override */
 a:hover {
-    color: #1997FE;
+    color: #1997FE ! important;
     text-decoration: underline;
 }
 
 .page_header_title {
-    font: bold normal normal 25pt Arial,Sans-Serif;
+    font: bold normal normal 25pt Arial, Sans-Serif;
     color: #777777;
 }
 
 .page_sub_title {
-    font: bold normal normal 17pt Arial,Sans-Serif;
+    font: bold normal normal 17pt Arial, Sans-Serif;
     color: #777777;
 }
 
-
 .page_header_alternate {
-    font: normal normal normal 20pt Arial,Sans-Serif;
+    font: normal normal normal 20pt Arial, Sans-Serif;
     color: #777777;
 }
 
 h1 {
-    font: normal normal bold 11pt Arial,Sans-Serif;
+    font: normal normal bold 11pt Arial, Sans-Serif;
     color: #999999;
     letter-spacing: 1px;
     margin: 0px;
@@ -443,7 +309,7 @@ h1 {
 }
 
 h2 {
-    font: normal normal bold 10pt Arial,Sans-Serif;
+    font: normal normal bold 10pt Arial, Sans-Serif;
     color: #999999;
     letter-spacing: 1px;
     margin: 0px;
@@ -451,7 +317,7 @@ h2 {
 }
 
 h3 {
-    font: normal normal bold 11pt Arial,Sans-Serif;
+    font: normal normal bold 11pt Arial, Sans-Serif;
     color: #606060;
     letter-spacing: 1px;
     margin: 0px;
@@ -459,13 +325,14 @@ h3 {
 }
 
 h4 {
-    font: normal normal bold 14pt Arial,Sans-Serif;
+    font: normal normal bold 14pt Arial, Sans-Serif;
     color: #0044D7;
     letter-spacing: 1px;
     margin: 0px;
     padding: 0px;
 }
 
+/* XXX Differs from quarantine style.css */
 /* the following pertain to the main content (i.e. the main 'metal-brushed') table */
 #table_main_center {
     background: url($image_root/background_table_main_center.gif) repeat;
@@ -508,13 +375,10 @@ hr {
      background-color: "#969696";
 }
 
-
   </style>
   </head>
+
   <body>
-
-
-
 
 <center>
 <table border="0" cellpadding="0" cellspacing="0" width="904">
@@ -562,7 +426,6 @@ hr {
     <!-- END MIDDLE THIRD -->
     <!-- CONTENT AREA -->
     <tr>
-
       <td id="table_main_left"></td>
 
       <!-- CENTER CELL -->
@@ -570,18 +433,18 @@ hr {
         <hr size="1" color="#969696" width="100%"/>
 
         <!-- INTRO MESSAGE -->
-          The emails listed below have been quarantined by Untangle Spam Blocker.
-          These emails will be deleted automatically after $daysToIntern days.<br><br>
-          To release a specific email from the quarantine and deliver the email to your inbox,
-          click <code>Release</code>.
-          To delete a specific email from the quarantine,
-          click <code>Delete</code>.
-      <br><br>
-      You may also choose to <a href="$linkgenerator.generateInboxLink()">visit your Inbox</a> online for more options.
-      <br><br>
+        #if ($hasRecords)
+        The emails listed below have been quarantined by Untangle Server and
+        will be deleted automatically after $daysToIntern days.
+        <br><br>
+        To release or delete a specific email from the quarantine and have it delivered to your inbox,
+        click <code>Release</code> or <code>Delete</code>, respectively.
+        <br><br>
+        You may also <a href="$linkgenerator.generateInboxLink()">visit your online quarantine</a> for more options.
+        <br><br>
 
-        <!-- MAIN MESSAGE -->
-          #if ($hasRecords)
+        <!-- MAIN TABLE -->
+        <center>
           <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tbody>
 <!--           <tr>
@@ -633,12 +496,12 @@ hr {
                         </td>
 
                         <th scope="row">TOTALS</th>
-                        <td colspan="3" align=left>$totalNumRecords<br>$totalSizeRecords</td>
+                        <td colspan="3" align=left>$totalNumRecords<br/>$totalSizeRecords</td>
                       </tr>
                     #else
                       <tr>
                         <th scope="row">TOTALS</th>
-                        <td colspan="6" align=left>$totalNumRecords<br>$totalSizeRecords</td>
+                        <td colspan="6" align=left>$totalNumRecords<br/>$totalSizeRecords</td>
                       </tr>
                     #end
                     </tfoot>
@@ -680,14 +543,16 @@ hr {
               </tr>
             </tbody>
           </table>
-          #else
-            There are no quarantined emails, but you may visit your <a href="$linkgenerator.generateInboxLink()"> online inbox</a> for more options
-          #end
+        </center>
+        #else
+        You have no quarantined emails but you may <a href="$linkgenerator.generateInboxLink()">visit your online quarantine</a> for more options.
+        <br><br>
+        #end
 
         <br/>
     <center>Powered by Untangle&reg; Server</center>
 
-          <hr size="1" color="#969696" width="100%"/>
+          <hr size="1" width="100%"/>
         </td>
       <!-- END CENTER CELL -->
       <td id="table_main_right"></td>
@@ -710,9 +575,6 @@ hr {
 </center>
 
 <!-- END BRUSHED METAL PAGE BACKGROUND -->
-
-
-
 
   </body>
 </html>
