add upgrade button to store check dialog.. also make upgrade list not selectable
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@9010 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/gui/api/com/untangle/gui/store/StoreCheckJDialog.form
+++ b/gui/api/com/untangle/gui/store/StoreCheckJDialog.form
@@ -84,6 +84,9 @@
         <Property name="doubleBuffered" type="boolean" value="true"/>
         <Property name="focusPainted" type="boolean" value="false"/>
         <Property name="focusable" type="boolean" value="false"/>
+        <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+          <Insets value="[2, 7, 2, 7]"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="proceedJButtonActionPerformed"/>
