--- a/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
+++ b/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
@@ -528,7 +528,7 @@ hr {
                             </td>
                             <td>$record.getMailSummary().FormattedQuarantineDetail</td>
                             <td>$jsEscaper.escapeJS($record.getMailSummary().TruncatedSubject)</td>
-                            <td>$record.FormattedDate</td>
+                            <td>$record.FormattedDate<br/>$record.FormattedTime</td>
                             <td>$record.FormattedSize</td>
                           </tr>
                           #set ($isEven = $isEven + 1)
