misc cleanup (for readability and consistency)
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@9045 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
+++ b/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
@@ -518,8 +518,8 @@ hr {
                           #end
                           <tr class="$parity">
                             <td class="first">
-                              <a href="$linkgenerator.generatePurgeLink($record.getMailID())">Delete</a><br>
-                              <a href="$linkgenerator.generateRescueLink($record.getMailID())">Release</a></td>
+                              <a href="$linkgenerator.generateRescueLink($record.getMailID())">Release</a><br/>
+                              <a href="$linkgenerator.generatePurgeLink($record.getMailID())">Delete</a></td>
                             <td>$jsEscaper.escapeJS($record.getMailSummary().TruncatedSender)</td>
                             <td>
                             #if ($record.getMailSummary().hasAttachments())
