--- a/gui/api/com/untangle/gui/configuration/RemoteCertGenSelfSignedJDialog.form
+++ b/gui/api/com/untangle/gui/configuration/RemoteCertGenSelfSignedJDialog.form
@@ -262,6 +262,7 @@
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="querying..."/>
+        <Property name="focusable" type="boolean" value="false"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
